--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -11,13 +11,13 @@
                 <label><h6>פעם ראשונה?</h6></label>
                 <!-- <button class="btn btn-dark btn-perple1 btn-lg" type="button" routerLink="/volunteer">מתנדב</button>
                 <button class="btn btn-dark btn-perple1 btn-lg" type="button" routerLink="/volunteer">נעזר</button> -->
-                <a  routerLink="/volunteer">מתנדב</a>   
-                <a  routerLink="/assisted">נעזר</a>  
+                <a  routerLink="/volunteer/register">מתנדב</a>   
+                <a  routerLink="/assisted/register">נעזר</a>  
             </div>
         </div>
 
       <div class="button-wapper col-sm-12">
-        <button type="submit" class="btn btn-dark btn-perple btn-lg" > התחבר </button>
+        <button type="submit" class="btn btn-dark btn-perple btn-lg"  > התחבר </button>
       </div> 
    </div>
 
