--- a/src/app/components/assisted/assisted.component.html
+++ b/src/app/components/assisted/assisted.component.html
@@ -26,7 +26,7 @@
         <div class="col-6">
             <h6>כתובת</h6>
             <select class="form-select form-control" aria-label="Default select example" #ngList3="ngModel" [(ngModel)]="Assisted.Assisted.code_city" name="city" required>
-                <option *ngFor="let item of list3" value="{{item.code_city}}" [ngValue]="item">{{item.name_city}}</option>
+                <option *ngFor="let item of list3" value="{{item.code_city}}" >{{item.name_city}}</option>
             </select>
             <!-- <input class="form-control" placeholder="עיר" type="text" #ngCity="ngModel" [(ngModel)]="Assisted.Assisted.code_city" name="code_city"/> -->
             <input class="form-control" placeholder="מספר בנין" type="number" #ngNumberBuild="ngModel" [(ngModel)]="Assisted.Assisted.number_building" name="number_building"/>
@@ -67,8 +67,8 @@
     <!-- </div>  -->
     <div class="row prograph">
             <h6 class="inline-title"> שפות:</h6>        
-            <div class="custom-control custom-checkbox" *ngFor="let item of list2" #ngList2="ngModel" [(ngModel)]="Assisted.Assisted.code_language" name="{{item.name_language}}">
-                <input type="checkbox" value={{item.code_language}} id={{item.code_language}} name={{item.code_language}} class="custom-control-input" >
+            <div class="custom-control custom-checkbox" *ngFor="let item of Assisted.Assisted.languages" name="language">
+                <input type="checkbox" value={{item.code_language}} id={{item.code_language}} name="{{item.name_language}}" class="custom-control-input" #ngList2="ngModel" [(ngModel)]="item.IsSelected" >
                 <label class="custom-control-label purple" for={{item.code_language}} value="{{item.code_language}}">{{item.name_language}}</label>
             </div>
             <!-- <h6 class="inline-title"> שפות:</h6>
