--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,11 +8,13 @@
             <input class="form-control" placeholder="סיסמא" type="password" #ngPassword="ngModel" [(ngModel)]="password" name="password">
             <!-- <a routerLink="/volunteer">שכחתי את הסיסמא?</a> -->
             <div class="first">
-                <label><h6>פעם ראשונה?</h6></label>
+
+              <h4>פעם ראשונה?
                 <!-- <button class="btn btn-dark btn-perple1 btn-lg" type="button" routerLink="/volunteer">מתנדב</button>
                 <button class="btn btn-dark btn-perple1 btn-lg" type="button" routerLink="/volunteer">נעזר</button> -->
-                <a  routerLink="/volunteer/register">מתנדב</a>   
-                <a  routerLink="/assisted/register">נעזר</a>  
+                 <a  routerLink="/volunteer/register">מתנדב</a>   
+                 <a  routerLink="/assisted/register">נעזר</a> 
+              </h4>
             </div>
         </div>
 
